# code-review-agent

./: .gitignore  PUSH.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
code_review_agent/: __init__.py  __main__.py
scripts/: post_github_review.py
tests/: test_agent.py  test_post_github_review.py
